# Sphere-Light-Render-Sundial-ComfyUI

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  __init__.py  package.json  pyproject.toml  render_bridge.py
docs/superpowers/plans/: 2026-07-05-time-of-day-sun.md  2026-07-06-mode-ui-clarity.md  2026-07-07-split-light-nodes.md  2026-07-11-photo-exif-node.md
docs/superpowers/specs/: 2026-07-06-mode-ui-clarity-design.md  2026-07-07-split-light-nodes-design.md  2026-07-08-input-driven-sphere-light-design.md
js/: compass.js  compass.test.js  driven.js  exif.js  geo.js  geo.test.js  light.js  light.test.js  location_search.js  nodes.js  photo.js  preview.js  solar.js  solar.test.js  sphere_widget.js  sun.js  sun.test.js  tz.js  tz.test.js  widget_style.js  widgets.js
tests/: compass.test.js  exif.test.js  geo.test.js  integration.test.js  light.test.js  photo.test.js  solar.test.js  status.test.js  sun.test.js  tz.test.js  widgets.test.js
tests/helpers/: tiff.js
tools/: build_cities.py  test_comfy_load.py  test_decode.py  test_driven_execute.py  test_inputs.py  test_new_nodes.py  test_render_bridge.py  verify_cities.py
